--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,9 @@ pluginManagement {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 dependencyResolutionManagement {
@@ -12,6 +15,9 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
 }
 rootProject.name = "BagStore"
