--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 
+    //jetpack compose icon=>
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
     //Navigation=>
     implementation "androidx.navigation:navigation-compose:2.5.1"
 
