--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation "androidx.compose.ui:ui:1.3.0-beta02"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
@@ -68,13 +68,13 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
 
     //Navigation=>
-    implementation "androidx.navigation:navigation-compose:2.5.1"
+    implementation "androidx.navigation:navigation-compose:2.5.2"
 
     //LiveData-State=>
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     //Coil=>
-    implementation("io.coil-kt:coil-compose:2.2.0")
+    implementation('io.coil-kt:coil-compose:2.2.1')
 
     //Coroutine=>
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
@@ -92,10 +92,10 @@ dependencies {
     kapt("androidx.room:room-compiler:2.4.3")
 
     //System Ui Controller=>
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.2-beta"
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.26.3-beta'
 
     //Koin in Jetpack Compose =>
-    implementation "dev.burnoo:cokoin:0.3.2"
-    implementation "dev.burnoo:cokoin-android-viewmodel:0.3.2" // for Androidx ViewModel
-    implementation "dev.burnoo:cokoin-android-navigation:0.3.2" // for Compose Navigation
+    implementation "dev.burnoo:cokoin:0.3.3"
+    implementation "dev.burnoo:cokoin-android-viewmodel:0.3.3" // for Androidx ViewModel
+    implementation "dev.burnoo:cokoin-android-navigation:0.3.3" // for Compose Navigation
 }
