--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,4 +98,8 @@ dependencies {
     implementation "dev.burnoo:cokoin:0.3.3"
     implementation "dev.burnoo:cokoin-android-viewmodel:0.3.3" // for Androidx ViewModel
     implementation "dev.burnoo:cokoin-android-navigation:0.3.3" // for Compose Navigation
+
+    //Material 3=>
+    implementation("androidx.compose.material3:material3:1.0.0-beta02")
+    implementation("androidx.compose.material3:material3-window-size-class:1.0.0-beta02")
 }
